<resources>
    <string name="app_name">TasksJava</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TaskEn">Tasks</string>
    <string name="buttonSend">Send</string>
    <string name="nameEn">Name</string>
    <string name="processEn">In the process</string>
    <string name="ExecutedEn">Executed</string>
</resources>