<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@android:color/black">
    <LinearLayout
        android:id="@+id/headerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/nameApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/TaskEn"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:layout_marginHorizontal="90dp"/>


    </LinearLayout>

<LinearLayout
    android:id="@+id/field"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/headerTitle"
    android:gravity="center">

    <EditText
        android:id="@+id/nameField"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_below="@+id/headerTitle"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:fontFamily="@font/inter_bold"
        android:hint="@string/nameEn"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/gray" />

    <ImageButton
        android:id="@+id/addedButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/addedd"
        android:contentDescription="@string/buttonSend"
        android:layout_marginVertical="15dp"
        android:layout_below="@+id/headerTitle"
        android:layout_marginHorizontal="10dp"
        />

</LinearLayout>




    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/field"
        android:layout_marginHorizontal="20dp"
        android:layout_above="@+id/bottom"
        android:layout_marginBottom="10dp"
        />

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/thisButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/processEn"
            android:textSize="20sp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/gray"
            android:textColor="@color/whiteText"
            android:paddingHorizontal="5dp"
            android:paddingVertical="5dp"/>

        <TextView
            android:id="@+id/buttonTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ExecutedEn"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/inter_medium"
            android:textSize="20sp"/>

    </LinearLayout>



</RelativeLayout>